fix: collapse margin and general footer stuff css

--- a/src/containers/About/index.module.css
+++ b/src/containers/About/index.module.css
@@ -1,7 +1,8 @@
 .bodyContainer {
 	background-color: #f2f2f2;
 	padding: 20px;
-	height: 100%;
+	padding-bottom: 0;
+	flex: 1;
 }
 
 .cardContainer {
