--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ body {
 
 .flex {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 /* button:disabled{
